Self-hosting, parallel test workers, MCP endpoint and signed releases
- Version is 0.10.1; a tag-triggered workflow builds, Ed25519-signs and
  publishes releases to GCS, with the public key baked into the CLI.
- First-party plugins and clients/web are workspace modules; jk plugin
  install-local and jk release (alias dist) produce the ship layout.
- Cross-module tests run in parallel by default with a per-module serial
  opt-out; -w and --parallel-tests drive within-module test workers.
- The engine hosts an MCP endpoint (POST /mcp, SSE) and owns the Chrome
  timeline; --output json and jsonl are one live JSONL event stream.
- Warm lock skips maven-metadata for exact pins and prefetches POMs;
  exclusive repository groups defend against dependency confusion.

Tickets: JK-1064, JK-1066, JK-1088, JK-1089, JK-1090, JK-1091, JK-1093, JK-1095, JK-1096